--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -2,12 +2,9 @@
 script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
 script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
 link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
-style
-  include main.css
   
 div.container
-  div.col-md-2
-    h3.nav-header Navigation
+  div.col-md-2.leftMenu
     div.sidebar-nav
       div.navbar.navbar-default(role='navigation')
         div.navbar-header
@@ -26,8 +23,17 @@ div.container
             li.active
               a(href='#') Paramètres
   div.col-md-10
-    h1.col-md-12 Configurations des comptes
-    div.col-md-6
-      h2 DoYouBuzz
-    div.col-md-6
-      h2 OpenBadges
+    div.row
+      h1.col-md-12 Configurations des comptes
+    div.row
+      div.col-md-6
+        h2 DoYouBuzz
+        p Entrer votre clé API obtenu de DoYouBuzz (#[a(href='#') Aide]) :
+        input.apikey(type='text', name='apikey', placeholder='API Key')
+      div.col-md-6
+        h2 OpenBadges
+        p Entrer l'adresse email associée à votre compte OpenBadges :
+        input.openBadgesEmail(type='text', name='openBadgesEmail', placeholder='name@example.com')
+    div.row
+      div.col-md-12.submitButton.text-center
+        button.btn.btn-primary Valider les changements
