Adding new jade templates for other pages (portfolio, choices). Adding profil page as home page. Changes in controllers (probably temporary)

--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -19,12 +19,13 @@ div.container
         div.navbar-collapse.collapse.sidebar-navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href='#') Mon Portfolio
+              a(href='#') Mon profil
             li
-              a(href='#') Mes choix
+              a(href='#portfolio') Mon Portfolio
+            li
+              a(href='#choices') Mes choix
             li.active
-              a(href='#') Paramètres
-              
+              a(href='#accountSettings') Paramètres
   div.col-md-10
     div.row.text-center
       h1.col-md-12 Configurations des comptes
