--- a/client/app/views/templates/index.jade
+++ b/client/app/views/templates/index.jade
@@ -18,14 +18,14 @@ div.container
           span.visible-xs.navbar-brand Menu
         div.navbar-collapse.collapse.sidebar-navbar-collapse
           ul.nav.navbar-nav
-            li
+            li.active
               a(href='#') Mon profil
             li
               a(href='#portfolio') Mon Portfolio
-            li.active
+            li
               a(href='#choices') Mes choix
             li
               a(href='#accountSettings') Paramètres
   div.col-md-10
     div.row.text-center
-      h1.col-md-12 Mes choix
+      h1.col-md-12 Mon profil
