--- a/client/app/views/templates/portfolio.jade
+++ b/client/app/views/templates/portfolio.jade
@@ -18,9 +18,14 @@ div.container
           span.visible-xs.navbar-brand Menu
         div.navbar-collapse.collapse.sidebar-navbar-collapse
           ul.nav.navbar-nav
+            li
+              a(href='#') Mon profil
             li.active
-              a(href='#') Mon Portfolio
+              a(href='#portfolio') Mon Portfolio
             li
-              a(href='#') Mes choix
+              a(href='#choices') Mes choix
             li
-              a(href='#') Paramètres
+              a(href='#accountSettings') Paramètres
+  div.col-md-10
+    div.row.text-center
+      h1.col-md-12 Vue de mon portfolio
