- Setting up accounts (DoYouBuzz and OpenBadges) in parameters view and storage with CozyDB + request to get userId from OpenBadges + get resquest to get all these informations on parameters page loading - minor application css change - modules changes due to request module installation

--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -5,7 +5,7 @@ link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css",
 style
   include main.css
   
-div.container
+div.container(onload="init()")
   div.col-md-2.leftMenu
     div.sidebar-nav
       div.navbar.navbar-default(role='navigation')
@@ -33,11 +33,45 @@ div.container
       div.col-md-6
         h2 DoYouBuzz
         p Entrer votre clé API obtenu de DoYouBuzz (#[a(href='#') Aide]) :
-        input.apikey(type='text', name='apikey', placeholder='API Key')
+        input#apiKey(type='text', name='DYBapiKey', placeholder='API Key')
+        p Entrer votre clé API secrète obtenu de DoYouBuzz :
+        input#apiSecret(type='text', name='DYBapiSecret', placeholder='API Secret')
       div.col-md-6
         h2 OpenBadges
         p Entrer l'adresse email associée à votre compte OpenBadges :
-        input.openBadgesEmail(type='text', name='openBadgesEmail', placeholder='name@example.com')
+        input#openBadgesEmail(type='text', name='OBemail', placeholder='name@example.com')
+        input#docId(type="text" hidden)
+      script(type="text/javascript").
+        console.log("INIT");
+        var xmlHttp = new XMLHttpRequest();
+        xmlHttp.open( "GET", "getAccountsInfos", false ); // false for synchronous request
+        xmlHttp.send( null );
+        var data = JSON.parse(xmlHttp.responseText)[0];
+        document.getElementById("apiKey").value = data.doYouBuzzAPIKey;
+        document.getElementById("apiSecret").value = data.doYouBuzzAPISecret;
+        document.getElementById("openBadgesEmail").value = data.openBadgesEmail;
+        document.getElementById("docId").value = data.id;
     div.row
       div.col-md-12.submitButton.text-center
-        button.btn.btn-primary Valider les changements
+        button.btn.btn-primary#submitChanges(onclick="submitAccountInfos()") Valider les changements
+        div.alert.alert-success#savedMessage(hidden) Preferences enregistrées !
+        div.alert.alert-danger#missingArguments(hidden) Des données sont manquantes ou invalides, merci de vérifier avant de réessayer.
+        
+script(type="text/javascript").
+    function submitAccountInfos(){
+        document.getElementById("missingArguments").setAttribute("hidden", true);
+        var DYBapiKey = document.getElementById("apiKey").value;
+        var DYBapiSecret = document.getElementById("apiSecret").value;
+        var OBemail = document.getElementById("openBadgesEmail").value;
+        var docId = document.getElementById("docId").value;
+        if(DYBapiKey == "" || DYBapiSecret == "" || OBemail == ""){
+            document.getElementById("missingArguments").removeAttribute("hidden");
+            return;
+        }
+        var parameters = "DYBapiKey=" + DYBapiKey + "&DYBapiSecret=" + DYBapiSecret + "&OBemail=" + OBemail + "&id=" + docId;
+        var xhttpInfos = new XMLHttpRequest();
+        xhttpInfos.open("PUT", "updateAccountsInfos", false);
+        xhttpInfos.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        xhttpInfos.send(parameters);
+        document.getElementById("savedMessage").removeAttribute("hidden");
+    }
