--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -26,7 +26,7 @@ div.container(onload="init()")
               a(href='#choices') Mes choix
             li.active
               a(href='#accountSettings') Paramètres
-  div.col-md-10
+  div.col-md-10.settingsContainer
     div.row.text-center
       h1.col-md-12 Configurations des comptes
     div.row
